# tower-htmx

./: .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md  gen-readmes.sh  shell.nix
.github/workflows/: build.yml
example/: Cargo.toml  index.html
example/assets/: index.html  test.html
example/src/: main.rs
example2/: Cargo.toml  index.html
example2/assets/: pretty.html
example2/src/: main.rs
lol-send/: Cargo.toml
lol-send/src/: lib.rs
tower-htmx/: Cargo.toml  README.md  README.tpl
tower-htmx/src/: error.rs  future.rs  lib.rs  presets.rs  rewriter.rs
tower-htmx2/: Cargo.toml
tower-htmx2/src/: lib.rs  sync.rs
tower-lol/: Cargo.toml  README.md  README.tpl
tower-lol/src/: either.rs  holdup.rs  lib.rs  multi.rs  presets.rs  resolve.rs  rewrite.rs  rewriter.rs  util.rs
