[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
tokio = { version = "1.28.2", features = ["sync", "rt-multi-thread", "macros", "net"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "set-header"] }
tower-livereload = "0.8.0"
tower-htmx = { version = "0.1.0-pre1", path = "../tower-htmx" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }
