[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1.32.0", features = ["sync", "rt-multi-thread", "macros", "net"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs", "set-header"] }
tower-livereload = "0.8.1"
tower-htmx = { version = "0.1.0-pre1", path = "../tower-htmx" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }
