[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["fs", "set-header"] }
tower-livereload = "0.9.3"
tower-htmx = { version = "0.1.0-pre1", path = "../tower-htmx" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18" }
