[package]
name = "tower-htmx"
version = "0.1.0-pre1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
form_urlencoded = "1.2.0"
http = "0.2.9"
http-body = "0.4.5"
percent-encoding = "2.3.0"
tower = "0.4.13"
tower-lol = { version = "0.1.0", path = "../tower-lol" }
